--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -42,6 +42,9 @@ env:
     - RAILS_MASTER_KEY
     - POSTGRES_PASSWORD
 
+ssh:
+  user: codrindev 
+
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     # SOLID_QUEUE_IN_PUMA: true
